--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -1,7 +1,7 @@
 extends ../layouts/base
 
 append vars
-	- title = 'Главная'
+	- title = 'Main page';
 
 block content
-	// include ../layouts/block
+	//- include ../layouts/offer
