--- a/src/sass/defaults/_!media.scss
+++ b/src/sass/defaults/_!media.scss
@@ -5,8 +5,8 @@ $large_tablet: 1024px;
 $small_tablet: 768px;
 
 $large_mobile: 580px;
-$small_mobile: 400px;
+$small_mobile: 440px;
 
-// @include max-screen($large_desktop) {
+// &::max-screen($large_desktop) {
 
 // }
