--- a/src/pug/mixins/svg.pug
+++ b/src/pug/mixins/svg.pug
@@ -1,5 +1,5 @@
 mixin icon(name, view)
 	- mod = mod || ''
 	- view = view || ''
-	svg(class="icon icon-" + name + ' ' + name, viewBox=view)
+	svg(class="icon icon-" + name, viewBox=view)
 		use(xlink:href="/app/icons/sprite.svg#" + name)
