--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,58 +5,125 @@ html(lang="ru")
 		meta(name='format-detection', content='telephone=no')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(charset='UTF-8')
+		link(rel="stylesheet" href="/css/app.css?v=" + Date.now())
 		meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
 
 		style.
-			*{
-				padding: 0;
-				margin: 0;
-			}
+
 			body{
-				background-color: #f3e6a4;
-				color: #171717;
-				font-size: 16px;
-				height: 100vh;
-				display: flex;
-				align-items: center;
-				justify-content: center;
+			    background-color: #212122;
+				color: #fff;
+				min-height: 100vh;
 				font-family: Arial;		
+				padding-top: 40px;
 			}
 
-			ol{
-				display: flex;
-				flex-wrap: wrap;
-				width: 80%;
-				margin: auto;
-				padding: 60px;
-
-				border-radius: 5px;
-				box-shadow: 0px 10px 20px 0px rgba(0,0,0,.1);
-				background-color: #fff;
-			}
-
-			li{
-				flex: 1 0 200px;
-				margin: 15px;
+			.box{
+				padding: 20px 40px;
+				background-color: #000;		
 			}
 
 			a{
-				color: #171717;
+				color: #fff;
+				position: relative;
+				display: inline-block;
+
+
 			}
 
-			h2{
-			    position: absolute;
-			    left: 0;
-			    top: 16px;
-			    text-align: center;
-			    width: 100%;
-			    font-size: 30px;
+			a::before{
+				content: "";
+				display: block;
+				position: absolute;
+				left: 0;
+				bottom: 0;
+				height: 1px;
+				width: 100%;
+				background-color: #fff;
+				transition: ease .2s;
+				transform: scale(0,1);
+
+			}
+			a:hover::before{
+				transform: scale(1, 1);
+			}
+			a:visited {
+			    color: #96fd8b;
+			}
+			a:visited::before{
+				background-color: #96fd8b;
+			}
+			ol{
+				-webkit-column-count: 3;
+				-moz-column-count: 3;
+				column-count: 3;
+				counter-reset: heading;
+				padding: 0;
+				margin-top: 16px;
+				margin-bottom: 25px;
+				margin-left: -25px;			
+			}
+
+			li{
+				font-size: 16px;
+				margin-bottom: 8px;
+				list-style: none;
+				page-break-inside: avoid;		
+				counter-increment: heading;	
+			}
+
+			li::before{
+				
+				content: counter(heading) ".";
+				font-size: 14px;
+			    color: rgba(241,241,241,.5);
+				display: inline-block;
+				width: 25px;
+				margin-right: 5px;
+				text-align: right;
+			}
+
+			h3{
+				margin-top: 24px;
+				margin-bottom: 40px;
+				font-size: 24px;
+				line-height: 1.4em;
 			    		
 			}
 
 			a:hover{
 				text-decoration: none;
 			}
+
+			/* Media */
+			@media only screen and (max-width: 1023px) {
+				ol {
+					-webkit-column-count: 3;
+					-moz-column-count: 3;
+					-column-count: 3;
+				}
+			}
+
+			@media only screen and (max-width: 767px) {
+				ol {
+					-webkit-column-count: 2;
+					-moz-column-count: 2;
+					-column-count: 2;
+				}
+			}
+
+			@media only screen and (max-width: 479px) {
+				ol {
+					-webkit-column-count: 1;
+					-moz-column-count: 1;
+					-column-count: 1;
+				}
+			}
 	body
-		#update-this
-	
+		.wrap
+			.box
+				h3 
+					| Страницы проекта 
+					nobr «#project»:
+				#update-this
+		
