--- a/src/sass/defaults/_content.scss
+++ b/src/sass/defaults/_content.scss
@@ -1,7 +1,9 @@
 
+
 .content p,.p,
 .content li, .li{
-
+	font-size: 1.6rem;
+	line-height: (19/16)*1;
 }
 
 .content ul, .content ol{
@@ -9,9 +11,14 @@
 }
 
 .content b,.b{
+	font-weight: bold;
 }
 
-.content a,.a{
+.content strong, .strong{
+	font-weight: 500;
+}
+
+.content a, .a{
 
 }
 
@@ -21,7 +28,7 @@
 .h4, .content h4,
 .h5, .content h5,
 .h6, .content h6,{
-	font-weight: 100;
+
 }
 
 .h1, .content h1{
