--- a/src/pug/layouts/base.pug
+++ b/src/pug/layouts/base.pug
@@ -58,16 +58,18 @@ html(class=html.classList)&attributes(html.attrs)
 				function canUseWebP(){var e=document.createElement("canvas");return!(!e.getContext||!e.getContext("2d"))&&0==e.toDataURL("image/webp").indexOf("data:image/webp")}var root=document.getElementsByTagName("html")[0];canUseWebP()?root.classList.add("ws"):root.classList.add("wn");
 		block head-end
 	body(class=body.classList)&attributes(body.attrs)
-		include tooltips
-		include menu-object
-		block header 
-			+header
+		block body-start
+
+		block header
+			include header
 		block content
 		block footer 
 			include footer
 		block popup 
 			include modals
+
 		block scripts
 			script(src="http://code.jquery.com/jquery-3.3.1.min.js")
 			script(src="/js/app.js?v=" + Date.now())
+				
 		block body-end
