Исправлен баг с live reload и pug

--- a/src/sass/defaults/_!media.scss
+++ b/src/sass/defaults/_!media.scss
@@ -7,6 +7,6 @@ $small_tablet: 768px;
 $large_mobile: 580px;
 $small_mobile: 440px;
 
-// &::max-screen($large_desktop) {
+// @include max-screen($large_desktop) {
 
 // }
