--- a/src/sass/defaults/_content.scss
+++ b/src/sass/defaults/_content.scss
@@ -1,52 +1,63 @@
-
-
-.content p,.p,
-.content li, .li{
+.content p,
+.p,
+.content li,
+.li {
 	font-size: 1.6rem;
-	line-height: (19/16)*1;
+	line-height: (19/16) * 1;
 }
 
-.content ul, .content ol{
-
+.content ul,
+.content ol {
 }
 
-.content b,.b{
+.content b,
+.b {
 	font-weight: bold;
 }
 
-.content strong, .strong{
+.content strong,
+.strong {
 	font-weight: 500;
 }
 
-.content a, .a{
-
+.content a,
+.a {
 }
 
-.h1, .content h1,
-.h2, .content h2,
-.h3, .content h3,
-.h4, .content h4,
-.h5, .content h5,
-.h6, .content h6,{
-
+.h1,
+.content h1,
+.h2,
+.content h2,
+.h3,
+.content h3,
+.h4,
+.content h4,
+.h5,
+.content h5,
+.h6,
+.content h6 {
 }
 
-.h1, .content h1{
+.h1,
+.content h1 {
 }
 
-.h2, .content h2{
+.h2,
+.content h2 {
 }
 
-.h3, .content h3{
-
+.h3,
+.content h3 {
 }
 
-.h4, .content h4{
+.h4,
+.content h4 {
 }
 
-.h5, .content h5{
+.h5,
+.content h5 {
 }
 
-
-.h6, .content h6{
-}	
+.h6,
+.content h6 {
+}
